--- a/InvoiceGenerator/InvoiceGenerator.Infrastructure/InvoiceGenerator.Infrastructure.csproj
+++ b/InvoiceGenerator/InvoiceGenerator.Infrastructure/InvoiceGenerator.Infrastructure.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\InvoiceGenerator.Service\InvoiceGenerator.Service.csproj" />
+    <ProjectReference Include="..\InvoiceGenerator.Application\InvoiceGenerator.Application.csproj" />
   </ItemGroup>
 
 </Project>
